--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/assets/bg-desktop.webp');
+    background-image: url('/assets/bg-desktop.webp');
     font-family: Bai Jamjuree;
 }
 
